updating website for SISSA

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<h1>Antimo Marrazzo</h1>
-				<p>Junior assistant professor (RTDa) at the Physics Department of University of Trieste</p>
+				<h1>Welcome to ARGO <br> <br> Ab initio Research GrOup </h1>
+				<p>Antimo Marrazzo <br> Assistant professor (RTDb) at SISSA</p>
 			</section>
 
 
@@ -59,23 +59,25 @@
             			<p>Latest highlights</p>    <!-- from the group -->
             		</header>
             		<div class="flex flex-2">
-            			<article>
-            				<p>August 2022</p>
-            				<header>
-            					<h3>*Job announcement* 1 PhD position (deadline 21 August) available </h3> More information about the position is available on the Psi-k mailing list, check out the <a href="https://psi-k.net/jobs/phd-position-on-digital-twins-of-artificial-topolo/" class="button special">PhD job description</a> and <a href="https://www2.units.it/dottorati/files/PhD04ConcorsoPNRR39.pdf" class="button special">apply</a>. 
-            				</header>
-            				<footer>
-            				</footer>
-            			</article>
 						<article>
-							<p>August 2022</p>
-						<header>
-							<h3>*Job announcement* 3 post-doc positions available </h3>
-							More information is available on the Psi-k mailing list, check out the job descriptions for  <a href="https://psi-k.net/jobs/2-post-doc-positions-on-2d-magnetic-materials-at-u/" class="button special">1 postdoc on 2D magnetic materials</a> and <a href="https://psi-k.net/jobs/2-post-doc-positions-on-neural-network-interatomic/" class="button special">2 industry postdocs on graphene and neural-network potentials</a> <br><br>
-						</header>
-						<footer>
-						</footer>
-					</article>
+							<p>January 2024</p>
+							<header>
+								<h3>Local Chern marker in PBCs</h3> 
+								We have derived a local Chern marker for infinite two-dimensional systems with periodic boundary conditions in the large supercell limit, where the electronic structure is sampled with one single point in reciprocal space.
+								Check it out on <a href="https://doi.org/10.1103/PhysRevB.109.014206" class="button special">PRB</a>. 
+							</header>
+							<footer>
+							</footer>
+							</article>
+							<article>
+								<p>January 2024</p>
+							<header>
+									<h3>Review on the Wannier-functions software ecosystem </h3> 
+									Check it out on  <a href="https://doi.org/10.48550/arXiv.2312.10769" class="button special">arXiv</a>.
+								</header>
+								<footer>
+								</footer>
+							</article>
             		</div>
             	</div>
 				<footer>
@@ -135,9 +137,9 @@
 					<header>
 						<h2>Contacts</h2>
 					    <!-- <p>Find out about our work</p> -->
-						<p>Address: strada Costiera 11, 34151 Trieste, Italy <br>
-						   Telephone: +39 0402240288<br>
-						   Email: antimo (DOT) marrazzo (AT) units (DOT) it<br>
+						<p>Address: Via Bonomea 265, 34136 Trieste, Italy <br>
+						   Telephone: +39 040 3787 477<br>
+						   Email: amarrazz (_AT_) sissa (-DOT-) it<br>
 						</p>
 					</header>
 					<header>
@@ -147,7 +149,7 @@
 				<div class="inner">
 					<div class="flex">
 						<div class="copyright">
-							2021 Antimo Marrazzo
+							2021-2024 Antimo Marrazzo
 							<!-- &copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>. -->
 						</div>
 						<ul class="icons">
