--- a/news.html
+++ b/news.html
@@ -37,6 +37,23 @@
 						<!--<p>Aliquam erat volutpat nam dui </p>-->
 					</header>
 					<article>
+						<p>August 2022</p>
+						<header>
+							<h3>*Job announcement* 1 PhD position (deadline 21 August) available </h3> More information about the position is available on the Psi-k mailing list, check out the <a href="https://psi-k.net/jobs/phd-position-on-digital-twins-of-artificial-topolo/" class="button special">PhD job description</a> and <a href="https://www2.units.it/dottorati/files/PhD04ConcorsoPNRR39.pdf" class="button special">apply</a>. 
+						</header>
+						<footer>
+						</footer>
+					</article>
+					<article>
+						<p>August 2022</p>
+					<header>
+						<h3>*Job announcement* 3 post-doc positions available </h3>
+						More information is available on the Psi-k mailing list, check out the job descriptions for  <a href="https://psi-k.net/jobs/2-post-doc-positions-on-2d-magnetic-materials-at-u/" class="button special">1 postdoc on 2D magnetic materials</a> and <a href="https://psi-k.net/jobs/2-post-doc-positions-on-neural-network-interatomic/" class="button special">2 industry postdocs on graphene and neural-network potentials</a> <br><br>
+					</header>
+					<footer>
+					</footer>
+				</article>
+					<article>
 						<p>December 2022</p>
 						<header>
 							<h3>*Job announcement* Two-year postdoc position on machine-learned interatomic potentials for 2D materials</h3>
