--- a/publications.html
+++ b/publications.html
@@ -49,10 +49,43 @@
 							<tbody>
                                 <tr> <!-- new paper -->
                                     <td style="vertical-align:middle"> </td>
+                                    <td> 23. </td>
+                                    <td>A. Zadoks, <b>A. Marrazzo</b> and N. Marzari<br>
+                                     <i>Spectral Operator Representations
+                                     </i><br>
+                                     <a href=https://arxiv.org/abs/2403.01514> arXiv:2403.01514  (2024) </a>
+                                    </td>
+                                    <td style="font-size:12px">
+                                    </td>
+                                </tr>
+                                <tr> <!-- new paper -->
+                                    <td style="vertical-align:middle"> </td>
+                                    <td> 22. </td>
+                                    <td><b>A. Marrazzo</b> and N. Colonna<br>
+                                     <i>Spin-dependent interactions in orbital-density-dependent functionals: non-collinear Koopmans spectral functionals
+                                     </i><br>
+                                     <a href=https://doi.org/10.48550/arXiv.2402.14575> arXiv:2402.14575 (2024) </a>
+                                    </td>
+                                    <td style="font-size:12px">
+                                    </td>
+                                </tr>
+                                <tr> <!-- new paper -->
+                                    <td style="vertical-align:middle"> </td>
+                                    <td> 21. </td>
+                                    <td><b>A. Marrazzo</b>, S. Beck, R. R. Margine, N. Marzari, A. A. Mostofi, J. Qiao, I. Souza, S. S. Tsirkin, J. R. Yates, G. Pizzi<br>
+                                     <i>The Wannier-Functions Software Ecosystem for Materials Simulations
+                                     </i><br>
+                                     <a href=https://doi.org/10.48550/arXiv.2312.10769> arXiv:2312.10769 (2023)</a>
+                                    </td>
+                                    <td style="font-size:12px">
+                                    </td>
+                                </tr>
+                                <tr> <!-- new paper -->
+                                    <td style="vertical-align:middle"> </td>
                                     <td> 20. </td>
                                     <td> N. Baù and <b>A. Marrazzo</b><br>
                                      <i>Local Chern marker for periodic systems</i><br>
-                                     <a href=https://doi.org/10.48550/arXiv.2310.15783> arXiv:2310.15783 (2023)</a>
+                                     <a href=https://doi.org/10.1103/PhysRevB.109.014206> Phys. Rev. B 109, 014206 (2024)</a>
                                     </td>
                                     <td style="font-size:12px">
                                     </td>
