--- a/es.html
+++ b/es.html
@@ -36,13 +36,22 @@
 						<h2>Electronic-Structure Theory & Algorithms</h2>
 						<!--<p>Aliquam erat volutpat nam dui </p>-->
 					</header>
+					<h2 id="content">Koopmans functionals</h2>
+					<div class="flex flex-2">
+
+					<article><img src="images/nckcw.pdf" width="100%" alt="Interaction and screening in non-collinear KCW"></article>
+							<article>
+					<p>
+						The presence of spin-orbit coupling or non-collinear magnetic spin states can have important effects on materials properties, in particular on excited states. Together with Nicola Colonna, we have developed non-collinear Koopmans-compliant functionals based on Wannier functions and density-functional perturbation theory (see [<a href=https://doi.org/10.48550/arXiv.2402.14575> arXiv:2402.14575 (2024)</a>]); these are functionals of four-component orbitals densities that can be obtained from the charge and spin-vector densities of Wannier functions. The predicted band gaps are very accurate, also for technology-relevant materials such as III-IV semiconductors and perovskites, and include spin-dependent interactions and screening effects that are not accounted for in standard diagrammatic approaches based on the random phase approximation.
+
+				</p></article>
 			
 								<!-- Intro -->
 								<h2 id="content">Locality of geometrical and topological properties of the electronic structure</h2>
 								<div class="flex flex-2">
 									<article>
 								<p>
-									Several properties in electronic-structure theory are defined as geometrical and topological quantities in reciprocal space, such as the Berry curvature or the quantum metric. Among these quantities we find topological invariants, the anomalous Hall conductivity, orbital magnetisation and many others. I have been developing local counterparts for a few geometrical properties of the electronic structure, both for tight-binding and first-principle calculations. 
+									Several properties in electronic-structure theory are defined as geometrical and topological quantities in reciprocal space, such as the Berry curvature or the quantum metric. Among these quantities we find topological invariants, the anomalous Hall conductivity, orbital magnetization and many others. I have been developing local counterparts for a few geometrical properties of the electronic structure, both for tight-binding and first-principle calculations. 
 								<br><br>	
 
 								For example, together with <a href='http://www-dft.ts.infn.it/~resta/'>Raffaele Resta</a> I have been showing that the orbital magnetisation of a magnetic metal does not depend on the boundary [<a href=https://doi.org/10.1103/PhysRevLett.116.137201>Phys. Rev. Lett. 116, 137201 (2016)</a>], contrary to the picture based on surface currents that is still present in most textbooks. Also the intrinsic part of the anomalous Hall conductivity is a local quantity [<a href=https://doi.org/10.1103/PhysRevB.95.121114>Phys. Rev. B 95, 121114(R) (2017)</a>] both in insulators and metals. We have also developed a local theory of the insulating state [<a href=https://doi.org/10.1103/PhysRevLett.122.166602>Phys. Rev. Lett. 122, 166602 (2019)</a>] that is solely based on the electronic ground-state.</p>
