--- a/research.html
+++ b/research.html
@@ -44,7 +44,7 @@
 							<header>
 								<h3>Electronic-Structure Theory & Methods</h3>
 							</header>
-							<p>Advances in electronic-structure theory and development of innovative methods</p>
+							<p>Advances in electronic-structure theory and computational methods</p>
 							<footer>
 								<a href="es.html" class="button special">Read More</a>
 							</footer>
