--- a/ml.html
+++ b/ml.html
@@ -42,8 +42,7 @@
 
 								<div class="flex flex-2">
 								<article>
-								<p>We are developing electronic structure fingerprints to chart the materials space and speed up first-principles simulations of complex properties. We couple machine learning methods with physics-based models, targeting accurate predictions of electronic structure properties at low cost.
-								The combination of disclosing unknown patterns in the materials space with data mining and speeding up the prediction of materials properties through machine learning, allows to accelerate the design and discovery of novel materials.
+								<p>We develop electronic structure descriptors and machine-learning algorithms to chart the materials space and speed up first-principles simulations of complex properties (see [<a href=https://arxiv.org/abs/2403.01514> arXiv:2403.01514  (2024) </a>]). By coupling machine-learning methods with physics-based models, we target accurate predictions of electronic structure properties at low cost. The combination of disclosing unknown patterns in the materials space with data mining and the speed-up in the prediction of materials properties through machine learning, allows accelerating the design and discovery of novel materials.
 								</p>
 								</article>
 								<article>
