--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
             		</header>
             		<div class="flex flex-2">
 						<article>
+							<p>April 2024</p>
+							<header>
+								<h3>Postdoc positions available</h3> 
+								A number of postdoc positions are available at ARGO in SISSA, Trieste. Research topics range from the design and discovery of novel 2D materials with magnetism or spin-orbit coupling physics, to the development of machine-learning methods for simulating the electronic structure of materials.
+							</header>
+							<footer>
+							</footer>
+						</article>
+						<article>
 							<p>January 2024</p>
 							<header>
 								<h3>Local Chern marker in PBCs</h3> 
@@ -68,15 +77,6 @@
 							</header>
 							<footer>
 							</footer>
-							</article>
-							<article>
-								<p>January 2024</p>
-							<header>
-									<h3>Review on the Wannier-functions software ecosystem </h3> 
-									Check it out on  <a href="https://doi.org/10.48550/arXiv.2312.10769" class="button special">arXiv</a>.
-								</header>
-								<footer>
-								</footer>
 							</article>
             		</div>
             	</div>
