--- a/news.html
+++ b/news.html
@@ -37,6 +37,15 @@
 						<!--<p>Aliquam erat volutpat nam dui </p>-->
 					</header>
 					<article>
+						<p>January 2024</p>
+					<header>
+							<h3>Review on the Wannier-functions software ecosystem </h3> 
+							Check it out on  <a href="https://doi.org/10.48550/arXiv.2312.10769" class="button special">arXiv</a>.
+						</header>
+						<footer>
+						</footer>
+					</article>
+					<article>
 						<p>August 2022</p>
 						<header>
 							<h3>*Job announcement* 1 PhD position (deadline 21 August) available </h3> More information about the position is available on the Psi-k mailing list, check out the <a href="https://psi-k.net/jobs/phd-position-on-digital-twins-of-artificial-topolo/" class="button special">PhD job description</a> and <a href="https://www2.units.it/dottorati/files/PhD04ConcorsoPNRR39.pdf" class="button special">apply</a>. 
