--- a/team.html
+++ b/team.html
@@ -34,7 +34,7 @@
             <section id="one" class="wrapper special">
                 <div class="inner">
                     <header class="align-center">
-                        <h2>Team</h2>
+                        <h2>The Argonauts (Team)</h2>
                         <!--<p>Aliquam erat volutpat nam dui </p>-->
                     
                     </header>   
