--- a/publications.html
+++ b/publications.html
@@ -49,6 +49,29 @@
 							<tbody>
                                 <tr> <!-- new paper -->
                                     <td style="vertical-align:middle"> </td>
+                                    <td> 25. </td>
+                                    <td>A. Berti, M. D'Alessio, M. Bianchi, L. Bignardi, P.
+                                        Lacovig, C. Sanders, S. Lizzit, P. Hofmann, <b>A. Marrazzo</b>, A. Baraldi<br>
+                                     <i>Unraveling Oxygen-Driven Surface Segregation Dynamics in Platinum-Gold Alloys
+                                     </i><br>
+                                     <a href=> submitted  (2024) </a>
+                                    </td>
+                                    <td style="font-size:12px">
+                                    </td>
+                                </tr>
+                                <tr> <!-- new paper -->
+                                    <td style="vertical-align:middle"> </td>
+                                    <td> 24. </td>
+                                    <td>N.Baù and <b>A. Marrazzo</b> <br>
+                                     <i>Theory of local Z2 topological markers for finite and periodic two-dimensional systems
+                                     </i><br>
+                                     <a href=https://arxiv.org/abs/2404.04598> arXiv:2404.04598 (2024) </a>
+                                    </td>
+                                    <td style="font-size:12px">
+                                    </td>
+                                </tr>
+                                <tr> <!-- new paper -->
+                                    <td style="vertical-align:middle"> </td>
                                     <td> 23. </td>
                                     <td>A. Zadoks, <b>A. Marrazzo</b> and N. Marzari<br>
                                      <i>Spectral Operator Representations
