--- a/team.html
+++ b/team.html
@@ -38,7 +38,8 @@
                         <!--<p>Aliquam erat volutpat nam dui </p>-->
                     
                     </header>   
-                       
+                    <article><img src="images/gplr.jpg" width="100%" alt="Localization marker"></article>
+                    <p>From left to right: Mitra, Roberta, Antimo, Davide, Nicolas, Nataliia, Eleonora.</p>
                     <!-- <div class="flex flex-2">    -->         
                     <div class="flex flex-3">
                         <div class="box person">
