--- a/topology.html
+++ b/topology.html
@@ -69,11 +69,11 @@
 							<br><br>
 							<br><br>
 								<!-- Intro -->
-								<h2 id="content">Spintronics and 2D materials</h2>
+								<h2 id="content">Spin-orbitronics and 2D materials</h2>
 								<div class="flex flex-2">
 									<article>
 								<p>
-									While conventional electronics encodes information into the electronic charge, spintronics relies on finding innovative ways to manipulate the electronic spin. This approach brings new functionalities, ultimately delivering multi-functional, high-speed, low-energy electronic	technologies. Crucial to progress in the field is the discovery of novel high-performance materials and their integration in devices enabling good control over their properties. Notably, the top-performing spintronic materials are intertwined with Einstein’s theory of special relativity. In fact, spintronics materials are characterised by a strong effect called “spin-orbit coupling”: in these materials the core electrons of the heavy chemical elements that are present, travel at enormous speed-comparable to the speed of light-such that relativistic corrections need to be introduced to amend the standard non-relativistic quantum mechanics that would be typically used to compute materials properties.
+									While conventional electronics encodes information into the electronic charge, spintronics (including the subfield of spin-orbitronics) relies on finding innovative ways to manipulate the electronic spin. This approach brings new functionalities, ultimately delivering multi-functional, high-speed, low-energy electronic	technologies. Crucial to progress in the field is the discovery of novel high-performance materials and their integration in devices enabling good control over their properties. Notably, the top-performing spin-orbitronics materials are intertwined with Einstein’s theory of special relativity. In fact, spin-orbitronics materials are characterized by a strong effect called “spin-orbit coupling”: in these materials the core electrons of the heavy chemical elements that are present, travel at enormous speed-comparable to the speed of light-such that relativistic corrections need to be introduced to amend the standard non-relativistic quantum mechanics that would be typically used to compute materials properties.
 									</p></article>
 									<article><img src="images/spinfet.png" width="100%" alt="Novel 2D material for spintronics."></article>
 									<p>
