--- a/news.html
+++ b/news.html
@@ -36,6 +36,46 @@
 						<h2>News archive</h2>
 						<!--<p>Aliquam erat volutpat nam dui </p>-->
 					</header>
+					
+						<article>
+							<p>July 2024</p>
+							<header>
+								<h3>2 PhD positions available</h3> 
+								Two fully-funded four-year PhD positions in collaboration with industry are available at ARGO in SISSA, Trieste. Applications deadline: August 27, 2024.
+								<a href="https://www.sissa.it/bandi/admission-sissa-phd-courses-academic-year-202425-cofinanced-piano-nazionale-di-ripresa" class="button special">Apply now</a>
+							</header>
+							<footer>
+							</footer>
+						</article>
+						<article>
+							<p>July 2024</p>
+							<header>
+								<h3>Spin-dependent interactions in orbital-density-dependent functionals: noncollinear Koopmans spectral functionals</h3> 
+								We have developed a functional approach that allows calculating band structures of semiconductors in a simple way and at low computational cost, even in presence of spin-orbit coupling or complex magnetic configurations.
+								Check it out on <a href="https://doi.org/10.1103/PhysRevResearch.6.033085" class="button special">PRResearch</a>. 
+							</header>
+							<footer>
+							</footer>
+							</article>
+					<article>
+						<p>April 2024</p>
+						<header>
+							<h3>Postdoc positions available</h3> 
+							A number of postdoc positions are available at ARGO in SISSA, Trieste. Research topics range from the design and discovery of novel 2D materials with magnetism or spin-orbit coupling physics, to the development of machine-learning methods for simulating the electronic structure of materials.
+						</header>
+						<footer>
+						</footer>
+					</article>
+					<article>
+						<p>January 2024</p>
+						<header>
+							<h3>Local Chern marker in PBCs</h3> 
+							We have derived a local Chern marker for infinite two-dimensional systems with periodic boundary conditions in the large supercell limit, where the electronic structure is sampled with one single point in reciprocal space.
+							Check it out on <a href="https://doi.org/10.1103/PhysRevB.109.014206" class="button special">PRB</a>. 
+						</header>
+						<footer>
+						</footer>
+						</article>
 					<article>
 						<p>January 2024</p>
 					<header>
