--- a/publications.html
+++ b/publications.html
@@ -47,14 +47,14 @@
                                 <col span="1" style="width: 20%; font-size:5px;">
                             </colgroup>
 							<tbody>
+
                                 <tr> <!-- new paper -->
                                     <td style="vertical-align:middle"> </td>
-                                    <td> 25. </td>
-                                    <td>A. Berti, M. D'Alessio, M. Bianchi, L. Bignardi, P.
-                                        Lacovig, C. Sanders, S. Lizzit, P. Hofmann, <b>A. Marrazzo</b>, A. Baraldi<br>
-                                     <i>Unraveling Oxygen-Driven Surface Segregation Dynamics in Platinum-Gold Alloys
+                                    <td> 24. </td>
+                                    <td><b>A. Marrazzo</b>, S. Beck, R. R. Margine, N. Marzari, A. A. Mostofi, J. Qiao, I. Souza, S. S. Tsirkin, J. R. Yates, G. Pizzi<br>
+                                     <i>The Wannier-Functions Software Ecosystem for Materials Simulations
                                      </i><br>
-                                     <a href=> submitted  (2024) </a>
+                                     <a href=https://doi.org/10.48550/arXiv.2312.10769> in press on Rev. Mod Phys (2024)</a>
                                     </td>
                                     <td style="font-size:12px">
                                     </td>
@@ -62,21 +62,22 @@
                                 <tr> <!-- new paper -->
                                     <td style="vertical-align:middle"> </td>
                                     <td> 24. </td>
-                                    <td>N.Baù and <b>A. Marrazzo</b> <br>
-                                     <i>Theory of local Z2 topological markers for finite and periodic two-dimensional systems
+                                    <td>A. Zadoks, <b>A. Marrazzo</b> and N. Marzari<br>
+                                     <i>Spectral Operator Representations
                                      </i><br>
-                                     <a href=https://arxiv.org/abs/2404.04598> arXiv:2404.04598 (2024) </a>
+                                     <a href=https://dx.doi.org/10.1038/s41524-024-01446-9> npj Computational Materials volume 10:278 (2024) </a>
                                     </td>
                                     <td style="font-size:12px">
                                     </td>
                                 </tr>
+  
                                 <tr> <!-- new paper -->
                                     <td style="vertical-align:middle"> </td>
                                     <td> 23. </td>
-                                    <td>A. Zadoks, <b>A. Marrazzo</b> and N. Marzari<br>
-                                     <i>Spectral Operator Representations
+                                    <td>N.Baù and <b>A. Marrazzo</b> <br>
+                                     <i>Theory of local Z2 topological markers for finite and periodic two-dimensional systems
                                      </i><br>
-                                     <a href=https://arxiv.org/abs/2403.01514> arXiv:2403.01514  (2024) </a>
+                                     <a href=https://doi.org/10.1103/PhysRevB.110.054203> Phys. Rev. B 110, 054203 (2024) </a>
                                     </td>
                                     <td style="font-size:12px">
                                     </td>
@@ -85,9 +86,9 @@
                                     <td style="vertical-align:middle"> </td>
                                     <td> 22. </td>
                                     <td><b>A. Marrazzo</b> and N. Colonna<br>
-                                     <i>Spin-dependent interactions in orbital-density-dependent functionals: non-collinear Koopmans spectral functionals
+                                     <i>Spin-dependent interactions in orbital-density-dependent functionals: noncollinear Koopmans spectral functionals
                                      </i><br>
-                                     <a href=https://doi.org/10.48550/arXiv.2402.14575> arXiv:2402.14575 (2024) </a>
+                                     <a href=https://doi.org/10.1103/PhysRevResearch.6.033085> Physical Review Research 6 (3), 033085 (2024) </a>
                                     </td>
                                     <td style="font-size:12px">
                                     </td>
@@ -95,10 +96,11 @@
                                 <tr> <!-- new paper -->
                                     <td style="vertical-align:middle"> </td>
                                     <td> 21. </td>
-                                    <td><b>A. Marrazzo</b>, S. Beck, R. R. Margine, N. Marzari, A. A. Mostofi, J. Qiao, I. Souza, S. S. Tsirkin, J. R. Yates, G. Pizzi<br>
-                                     <i>The Wannier-Functions Software Ecosystem for Materials Simulations
+                                    <td>A. Berti, M. D'Alessio, M. Bianchi, L. Bignardi, P.
+                                        Lacovig, C. Sanders, S. Lizzit, P. Hofmann, <b>A. Marrazzo</b>, A. Baraldi<br>
+                                     <i>Unraveling Oxygen-Driven Surface Segregation Dynamics in Platinum-Gold Alloys
                                      </i><br>
-                                     <a href=https://doi.org/10.48550/arXiv.2312.10769> arXiv:2312.10769 (2023)</a>
+                                     <a href=https://doi.org/10.1016/j.apsusc.2024.160577> Applied Surface Science 670, 160577  (2024) </a>
                                     </td>
                                     <td style="font-size:12px">
                                     </td>
