--- a/index.html
+++ b/index.html
@@ -59,6 +59,27 @@
             			<p>Latest highlights</p>    <!-- from the group -->
             		</header>
 					<div class="flex flex-2">
+						<article>
+							<p>December 2024</p>
+							<header>
+								<h3>Total Energy and Force Methods workshop</h3> 
+								The “Total Energy” is a renowned workshop about recent progress in electronic structure methods and their applications. It has been held traditionally in Trieste every two years since the 80s and become one of the most popular regular events of the international ab initio electronic structure community.
+								The workshop is scheduled for January 8-10 2025, featuring an outstanding list of invited speakers and more than 120 accepted poster abstracts!
+								<a href="https://indico.ictp.it/event/10815" class="button special">Check out the program online</a>
+							</header>
+							<footer>
+							</footer>
+						</article>
+						<article>
+							<p>December 2024</p>
+							<header>
+								<h3>Spectral operator Representations</h3> 
+								We have introduced a general framework focused on electronic-structure descriptors that take advantage of the natural symmetries and inherent interpretability of physical models. We apply this framework first to material similarity and then to machine-learning accelerated screening of transparent conducting materials, substantially outperforming atomic-structure based descriptors.
+								<a href="https://dx.doi.org/10.1038/s41524-024-01446-9" class="button special">Read more on npj Computational Materials</a>
+							</header>
+							<footer>
+							</footer>
+						</article>
 					</div>
             	</div>
 				<footer>
