--- a/publications.html
+++ b/publications.html
@@ -50,11 +50,11 @@
 
                                 <tr> <!-- new paper -->
                                     <td style="vertical-align:middle"> </td>
-                                    <td> 24. </td>
+                                    <td> 25. </td>
                                     <td><b>A. Marrazzo</b>, S. Beck, R. R. Margine, N. Marzari, A. A. Mostofi, J. Qiao, I. Souza, S. S. Tsirkin, J. R. Yates, G. Pizzi<br>
-                                     <i>The Wannier-Functions Software Ecosystem for Materials Simulations
+                                     <i>Wannier-function software ecosystem for materials simulations
                                      </i><br>
-                                     <a href=https://doi.org/10.48550/arXiv.2312.10769> in press on Rev. Mod Phys (2024)</a>
+                                     <a href=https://doi.org/10.1103/RevModPhys.96.045008> Rev. Mod. Phys. 96, 045008 (2024)</a>
                                     </td>
                                     <td style="font-size:12px">
                                     </td>
@@ -348,7 +348,7 @@
                                         <div class="flex">
                                                 <div class="copyright">
                                                         <!-- &copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>.-->
-                                                        2021 Antimo Marrazzo
+                                                        2021-2025 Antimo Marrazzo
                                                 </div>
                                         </div>
                                 </div>
